--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,11 +8,6 @@ env:
   AWS_DEFAULT_REGION: us-west-2
 
 jobs:
-  my-job:
-    runs-on: ubuntu-latest
-    steps:
-      - name: my-step
-        run: echo "Hello World!"
   push-to-s3:
     name: push-to-s3
     runs-on: ubuntu-latest
@@ -22,16 +17,15 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+    - name: Compress code files
+      run: |
+        zip lambda_function.zip lambda_function.py
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-region: us-west-2
-        ## the following creates an ARN based on the values entered into github secrets
-        role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_DEPLOY_ROLE }}
+        role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_ROLE_NAME }}
         role-session-name: myGitHubActions
-    - name: Compress code files
-      run: |
-        zip lambda_function.zip lambda_function.py
     - name: Sync files to S3 bucket
       run: |
         aws s3 cp lambda_function.zip s3://actions-lambda-poc
