--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
   push-to-s3:
     name: push-to-s3
     runs-on: ubuntu-latest
+    environment: test
     permissions:
       id-token: write
       contents: read
