--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,3 +30,6 @@ jobs:
     - name: Sync files to S3 bucket
       run: |
         aws s3 cp lambda_function.zip s3://actions-lambda-poc
+    - name: Update Lambda function
+      run : |
+        aws lambda update-function-code --function-name secrets.AWS_LAMBDA --s3-bucket secrets.AWS_S3_BUCKET --region us-west-2
