--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,15 @@
 ---
 name: Update Lambda
-on:
-  push:
-    branches:
-      - main
-      - release
-env:
-  AWS_DEFAULT_REGION: us-west-2
 
 jobs:
-  update-lambda:
-    name: update-lambda
-    runs-on: ubuntu-latest
+  update-lambda-test:
+    if: github.GITHUB_REF_NAME == 'main'
+    name: update-lambda-test
     environment: test
-    permissions:
-      id-token: write
-      contents: read
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-    - name: Compress code files
-      run: |
-        zip lambda_function.zip lambda_function.py
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        aws-region: us-west-2
-        role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_ROLE_NAME }}
-        role-session-name: myGitHubActions
-    - name: Sync files to S3 bucket
-      run: |
-        aws s3 cp lambda_function.zip s3://actions-lambda-poc
-    - name: Update Lambda function
-      run : |
-        aws lambda update-function-code --function-name ${{ secrets.AWS_LAMBDA }} --s3-bucket ${{ secrets.AWS_S3_BUCKET }} --s3-key "lambda_function.zip" --region us-west-2
+    uses: Beshlawy's/actions-lambda-poc/.github/workflows/template.yml@main
+
+  update-lambda-prod:
+    if: github.GITHUB_REF_NAME == 'release'
+    name: update-lambda-prod
+    environment: prod
+    uses: Beshlawy's/actions-lambda-poc/.github/workflows/template.yml@release
