--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,13 +3,13 @@ name: Update Lambda
 
 jobs:
   update-lambda-test:
-    if: if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
     name: update-lambda-test
     environment: test
     uses: Beshlawy-s/actions-lambda-poc/.github/workflows/template.yml@main
 
   update-lambda-prod:
-    if: if: github.ref == 'refs/heads/release'
+    if: github.ref == 'refs/heads/release'
     name: update-lambda-prod
     - uses: Beshlawy-s/actions-lambda-poc/.github/workflows/template.yml@release
       environment: prod
