--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Use Update Lambda Template
-        uses: .github/actions/update-lambda
+        uses: ./.github/actions/update-lambda
+        with:
+          aws-account-id: ${{ secrets.AWS_ACCOUNT_ID }}
+          aws-role-name: ${{ secrets.AWS_ROLE_NAME }}
+          aws-lambda-name: ${{ secrets.AWS_LAMBDA_NAME }}
+          aws-s3-bucket-name: ${{ secrets.AWS_S3_BUCKET_NAME }}
 
   update-lambda-prod:
     if: github.ref == 'refs/heads/release'
@@ -26,4 +31,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Use Update Lambda Template
-        uses: .github/actions/update-lambda
+        uses: ./.github/actions/update-lambda
+        with:
+          aws-account-id: ${{ secrets.AWS_ACCOUNT_ID }}
+          aws-role-name: ${{ secrets.AWS_ROLE_NAME }}
+          aws-lambda-name: ${{ secrets.AWS_LAMBDA_NAME }}
+          aws-s3-bucket-name: ${{ secrets.AWS_S3_BUCKET_NAME }}
