--- a/.github/actions/update-lambda/action.yml
+++ b/.github/actions/update-lambda/action.yml
@@ -35,7 +35,7 @@ jobs:
       uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-region: us-west-2
-        role-to-assume: arn:aws:iam::${{ env.aws-account-id }}:role/${{ github.event.inputs.aws-role-name }}
+        role-to-assume: arn:aws:iam::$aws-account-id:role/${{ github.event.inputs.aws-role-name }}
         role-session-name: myGitHubActions
     - name: Copy files to S3 bucket
       run: |
