--- a/.github/actions/update-lambda/action.yml
+++ b/.github/actions/update-lambda/action.yml
@@ -1,11 +1,5 @@
 ---
 name: Update Lambda Template
-env:
-  AWS_DEFAULT_REGION: us-west-2
-  AWS_ACCOUNT_ID: inputs.aws-account-id
-  AWS_ROLE_NAME: inputs.aws-role-name
-  AWS_LAMBDA_NAME: inputs.aws-lambda-name
-  AWS_S3_BUCKET_NAME: inputs.aws-s3-bucket-name
 
 inputs:
   aws-account-id:
@@ -34,18 +28,26 @@ runs:
     shell: bash
     run: |
       zip lambda_function.zip lambda_function.py
-      echo $AWS_ACCOUNT_ID
   - name: Configure AWS Credentials
     uses: aws-actions/configure-aws-credentials@v4
     with:
-      aws-region: us-west-2
+      aws-region: $AWS_DEFAULT_REGION
       role-to-assume: arn:aws:iam::$AWS_ACCOUNT_ID:role/$AWS_ROLE_NAME
       role-session-name: myGitHubActions
+    env:
+      AWS_ACCOUNT_ID: inputs.aws-account-id
+      AWS_ROLE_NAME: inputs.aws-role-name
   - name: Copy files to S3 bucket
     shell: bash
     run: |
-      aws s3 cp lambda_function.zip s3://actions-lambda-poc
+      aws s3 cp lambda_function.zip s3://$AWS_ROLE_NAME
+    env:
+      AWS_S3_BUCKET_NAME: inputs.aws-s3-bucket-name
   - name: Update Lambda function
     shell: bash
     run : |
       aws lambda update-function-code --function-name $AWS_LAMBDA_NAME --s3-bucket $AWS_S3_BUCKET_NAME --s3-key "lambda_function.zip" --region $AWS_DEFAULT_REGION
+    env:
+      AWS_LAMBDA_NAME: inputs.aws-lambda-name
+      AWS_S3_BUCKET_NAME: inputs.aws-s3-bucket-name
+      AWS_DEFAULT_REGION: us-west-2
