--- a/.github/actions/update-lambda/action.yml
+++ b/.github/actions/update-lambda/action.yml
@@ -30,25 +30,25 @@ runs:
       zip lambda_function.zip lambda_function.py
   - name: Configure AWS Credentials
     uses: aws-actions/configure-aws-credentials@v4
-    with:
-      aws-region: $AWS_DEFAULT_REGION
-      role-to-assume: arn:aws:iam::$AWS_ACCOUNT_ID:role/$AWS_ROLE_NAME
-      role-session-name: myGitHubActions
     env:
       AWS_ACCOUNT_ID: inputs.aws-account-id
       AWS_ROLE_NAME: inputs.aws-role-name
       AWS_DEFAULT_REGION: us-west-2
+    with:
+      aws-region: us-west-2
+      role-to-assume: arn:aws:iam::$AWS_ACCOUNT_ID:role/$AWS_ROLE_NAME
+      role-session-name: myGitHubActions
   - name: Copy files to S3 bucket
     shell: bash
-    run: |
-      aws s3 cp lambda_function.zip s3://$AWS_ROLE_NAME
     env:
       AWS_S3_BUCKET_NAME: inputs.aws-s3-bucket-name
+    run: |
+      aws s3 cp lambda_function.zip s3://$AWS_ROLE_NAME
   - name: Update Lambda function
     shell: bash
-    run : |
-      aws lambda update-function-code --function-name $AWS_LAMBDA_NAME --s3-bucket $AWS_S3_BUCKET_NAME --s3-key "lambda_function.zip" --region $AWS_DEFAULT_REGION
     env:
       AWS_LAMBDA_NAME: inputs.aws-lambda-name
       AWS_S3_BUCKET_NAME: inputs.aws-s3-bucket-name
       AWS_DEFAULT_REGION: us-west-2
+    run : |
+      aws lambda update-function-code --function-name $AWS_LAMBDA_NAME --s3-bucket $AWS_S3_BUCKET_NAME --s3-key "lambda_function.zip" --region $AWS_DEFAULT_REGION
