--- a/.github/actions/update-lambda/action.yml
+++ b/.github/actions/update-lambda/action.yml
@@ -31,12 +31,12 @@ runs:
   - name: Configure AWS Credentials
     uses: aws-actions/configure-aws-credentials@v4
     env:
-      AWS_ACCOUNT_ID: inputs.aws-account-id
-      AWS_ROLE_NAME: inputs.aws-role-name
+      AWS_ACCOUNT_ID: {{ inputs.aws-account-id }}
+      AWS_ROLE_NAME: {{ inputs.aws-role-name }}
       AWS_DEFAULT_REGION: us-west-2
     with:
-      aws-region: us-west-2
-      role-to-assume: arn:aws:iam::$AWS_ACCOUNT_ID:role/$AWS_ROLE_NAME
+      aws-region: {{ env.AWS_DEFAULT_REGION }}
+      role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/${{ env.AWS_ROLE_NAME }}
       role-session-name: myGitHubActions
   - name: Copy files to S3 bucket
     shell: bash
