--- a/.github/actions/update-lambda/action.yml
+++ b/.github/actions/update-lambda/action.yml
@@ -32,10 +32,9 @@ runs:
     uses: aws-actions/configure-aws-credentials@v4
     env:
       AWS_ACCOUNT_ID: ${{ inputs.aws-account-id }}
-      AWS_ROLE_NAME: ${{ inputs.aws-role-name }}
-      AWS_DEFAULT_REGION: us-west-2
+      AWS_ROLE_NAME: ${{ inputs.aws-role-name }}us-west-2
     with:
-      aws-region: $AWS_DEFAULT_REGION
+      aws-region: us-west-2
       role-to-assume: arn:aws:iam::$AWS_ACCOUNT_ID:role/$AWS_ROLE_NAME
       role-session-name: myGitHubActions
   - name: Copy files to S3 bucket
@@ -49,6 +48,5 @@ runs:
     env:
       AWS_LAMBDA_NAME: ${{ inputs.aws-lambda-name }}
       AWS_S3_BUCKET_NAME: ${{ inputs.aws-s3-bucket-name }}
-      AWS_DEFAULT_REGION: us-west-2
     run : |
-      aws lambda update-function-code --function-name $AWS_LAMBDA_NAME --s3-bucket $AWS_S3_BUCKET_NAME --s3-key "lambda_function.zip" --region $AWS_DEFAULT_REGION
+      aws lambda update-function-code --function-name $AWS_LAMBDA_NAME --s3-bucket $AWS_S3_BUCKET_NAME --s3-key "lambda_function.zip" --region us-west-2
