--- a/.github/actions/update-lambda/action.yml
+++ b/.github/actions/update-lambda/action.yml
@@ -5,6 +5,7 @@ inputs:
   aws-account-id:
     description: 'AWS Account ID'
     required: true
+    default: 232434
   aws-role-name:
     description: 'AWS Role Name'
     required: true
