--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,10 @@ on:
       - main
       - release
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   update-lambda-test:
     if: github.ref == 'refs/heads/main'
