--- a/.github/actions/update-lambda/action.yml
+++ b/.github/actions/update-lambda/action.yml
@@ -33,7 +33,7 @@ runs:
       AWS_ROLE_NAME: ${{ inputs.aws-role-name }}
     with:
       aws-region: us-west-2
-      role-to-assume: arn:aws:iam::$AWS_ACCOUNT_ID:role/$AWS_ROLE_NAME
+      role-to-assume: arn:aws:iam::${AWS_ACCOUNT_ID}:role/${AWS_ROLE_NAME}
       role-session-name: myGitHubActions
   - name: Copy files to S3 bucket
     shell: bash
